@@ -28,7 +28,9 @@
 #include <mln/io/magick/load.hh>
 #include <mln/io/pbm/save.hh>
 #include <mln/data/transform.hh>
+#include <mln/arith/revert.hh>
 #include <mln/fun/v2v/rgb_to_luma.hh>
+#include <mln/logical/not.hh>
 
 #include <scribo/binarization/otsu.hh>
 #include <scribo/debug/option_parser.hh>
@@ -46,6 +48,8 @@ static const scribo::debug::arg_data arg_desc[] =
 static const scribo::debug::toggle_data toggle_desc[] =
 {
   // name, description, default value
+  { "negate-input", "Negate input image before binarizing.", false },
+  { "negate-output", "Negate output image before binarizing.", false },
   {0, 0, false}
 };
 
@@ -92,7 +96,13 @@ int main(int argc, char *argv[])
   image2d<value::int_u8>
     input_1_gl = data::transform(input, mln::fun::v2v::rgb_to_luma<value::int_u8>());
 
+  if (options.is_enabled("negate-input"))
+    input_1_gl = arith::revert(input_1_gl);
+
   image2d<bool> out = scribo::binarization::otsu(input_1_gl);
+
+  if (options.is_enabled("negate-output"))
+    logical::not_inplace(out);
 
   io::pbm::save(out, options.arg("output.pbm"));
 
